Added multiple lights and ambient light

--- a/LightingTest/LightingTest/LightingTest.vcxproj
+++ b/LightingTest/LightingTest/LightingTest.vcxproj
@@ -119,11 +119,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="LightingComponent\src\Light.cpp" />
     <ClCompile Include="LightingComponent\src\LightManager.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="LightingComponent\include\Light.h" />
     <ClInclude Include="LightingComponent\include\LightManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
