--- a/LightingTest/LightingTest/LightingTest.vcxproj
+++ b/LightingTest/LightingTest/LightingTest.vcxproj
@@ -121,12 +121,14 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="LightingComponent\src\Light.cpp" />
     <ClCompile Include="LightingComponent\src\LightManager.cpp" />
+    <ClCompile Include="LightingComponent\src\ShadowCaster.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="LightingComponent\include\Light.h" />
     <ClInclude Include="LightingComponent\include\LightManager.h" />
+    <ClInclude Include="LightingComponent\include\ShadowCaster.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
