--- a/LightingTest/LightingTest/LightingTest.vcxproj.filters
+++ b/LightingTest/LightingTest/LightingTest.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="LightingComponent\src\Light.cpp">
       <Filter>Source Files\Component</Filter>
     </ClCompile>
+    <ClCompile Include="LightingComponent\src\ShadowCaster.cpp">
+      <Filter>Source Files\Component</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files\Component</Filter>
     </ClInclude>
     <ClInclude Include="LightingComponent\include\Light.h">
+      <Filter>Header Files\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="LightingComponent\include\ShadowCaster.h">
       <Filter>Header Files\Component</Filter>
     </ClInclude>
   </ItemGroup>
