--- a/LightingTest/LightingTest/LightingTest.vcxproj
+++ b/LightingTest/LightingTest/LightingTest.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="LightingComponent\src\Light.cpp" />
     <ClCompile Include="LightingComponent\src\LightManager.cpp" />
+    <ClCompile Include="LightingComponent\src\Ray.cpp" />
     <ClCompile Include="LightingComponent\src\ShadowCaster.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -128,6 +129,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="LightingComponent\include\Light.h" />
     <ClInclude Include="LightingComponent\include\LightManager.h" />
+    <ClInclude Include="LightingComponent\include\Ray.h" />
     <ClInclude Include="LightingComponent\include\ShadowCaster.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
