--- a/LightingTest/LightingTest/LightingTest.vcxproj.filters
+++ b/LightingTest/LightingTest/LightingTest.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="LightingComponent\src\ShadowCaster.cpp">
       <Filter>Source Files\Component</Filter>
     </ClCompile>
+    <ClCompile Include="LightingComponent\src\Ray.cpp">
+      <Filter>Source Files\Component</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files\Component</Filter>
     </ClInclude>
     <ClInclude Include="LightingComponent\include\ShadowCaster.h">
+      <Filter>Header Files\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="LightingComponent\include\Ray.h">
       <Filter>Header Files\Component</Filter>
     </ClInclude>
   </ItemGroup>
